--- a/Sachin/app/public/index.html
+++ b/Sachin/app/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
+
+  <link rel="stylesheet" href="https://fontawesome.com/kits/a63ce71be3/use?welcome=yes">
+
     <title>React App</title>
   </head>
   <body>
